--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "uilocal",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private":"true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "next": "^13.0.4",
+    "typescript": "^4.9.3"
   }
 }
